<resources>
    <string name="app_name">Zeem</string>
    <plurals name="likes_count">
        <item quantity="one">%d Star</item>
        <item quantity="other">%d Stars</item>
    </plurals>
    <plurals name="members_count">
        <item quantity="one">%d Member</item>
        <item quantity="other">%d Members</item>
    </plurals>
    <plurals name="total_comments">
        <item quantity="one">&#160; &#x2022; %d Comment</item>
        <item quantity="other">&#160; &#x2022; %d Comments</item>
    </plurals>
    <string name="allowed_char_for_name">abcdefghijklmnopqrstuvwxyzQWERTYUIOPLKJHGFDSAZXCVBNM 0123456789</string>
    <string name="allowed_char_for_username">QWERTYUIOPLKJHGFDSAZXCVBNMabcdefghijklmnopqrstuvwxyz_.0123456789</string>
    <string name="web_zeem">http://zeem.octabyte.org</string>
    <string name="web_terms_and_condition">http://zeem.octabyte.org/terms.html</string>
    <string name="web_feedback">https://goo.gl/forms/7ifBHjBGqzGcQARo2</string>
    <string name="web_contact_us">https://goo.gl/forms/2o8CUV8AGaTJVVQ43</string>
    <string name="tap_to_play">Tap to play</string>
    <string name="type_a_comment">Type a comment</string>
    <string name="notifications">Notifications</string>
    <string name="requests">REQUESTS</string>
    <string name="post">POST</string>
    <string name="expire">Expire</string>
    <string name="tag_people">Tag People</string>
    <string name="turn_off_comments">TURN OFF COMMENTS</string>
    <string name="search">Search</string>
    <string name="powered_by_octabyte">Powered By OctaByte</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_phone_number">Phone number (e.g 650 555 1234)</string>
    <string name="log_in">Log in</string>
    <string name="ooops">Ooops!</string>
    <string name="no_internet_connection_found">No internet connection found.</string>
    <string name="check_your_connection">Check connection.</string>
    <string name="whoops_nothing_found">Whoops, nothing found!</string>
    <string name="we_couldn_t_find_anything_related_to_this">We couldn\'t find anything related to this.</string>
    <string name="maybe_check_later">Maybe check later.</string>
    <string name="retry">Retry</string>
    <string name="loading_msg">Loading…</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="title_comment">Comments</string>
    <string name="error_in_network_connection">Error in Network Connection</string>
    <string name="toolbar_title_post">POST</string>
    <string name="friends">Friends</string>
    <string name="followers">Follower</string>
    <string name="following">Following</string>
    <string name="blocked">Blocked</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="block">Block</string>
    <string name="un_block">Unblock</string>
    <string name="follow">Follow</string>
    <string name="un_follow">Unfollow</string>
    <string name="toolbar_likes">Stars</string>
    <string name="create_list">CREATE</string>
    <string name="lists">Circles</string>
    <string name="toolbar_tag">Tagged</string>
    <string name="toolbar_list_members">Circle Members</string>
    <string name="toolbar_update">UPDATE</string>
    <string name="list_name">Circle Name</string>
    <string name="you_can_add_only_friends">You can add only friends</string>
    <string name="toolbar_new_list">New Circle</string>
    <string name="toolbar_action_done">Done</string>
    <string name="pin_code">Pin Code</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="verify">VERIFY</string>
    <string name="change_photo">Change Photo</string>
    <string name="username">User Name</string>
    <string name="fullname">Full Name</string>
    <string name="your_status">Your slogan</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="create_profile">Create Profile</string>
    <string name="accept">Accept</string>
    <string name="your_profile_is_edit_successfully">Your profile is Updated successfully</string>
    <string name="expire_prompt">Never</string>
    <string-array name="expire_arrays">
        <item>Never</item>
        <item>1 Hr.</item>
        <item>2 Hr.</item>
        <item>1 Day</item>
    </string-array>
    <string name="show_tag_prompt">Public</string>
    <string-array name="show_tag_arrays">
        <item>Public</item>
        <item>Private</item>
        <item>Never</item>
    </string-array>
    <string name="show_tag_public">
        Public: When someone Tags you in a post, it will appear in your public and private profile,
        and your friends and followers can see that post.
    </string>
    <string name="show_tag_private">
        Private: When someone Tags you in a post, it will appear in your private profile,
        and only your friends can see that post.
    </string>
    <string name="show_tag_never">
        Never: When someone Tags you in a post, A notification will be sent to you. Then you can allow
        it to show in public or private profile.
    </string>
    <string name="who_tag_prompt">Public</string>
    <string-array name="who_tag_arrays">
        <item>Public</item>
        <item>Friends</item>
        <item>No one</item>
    </string-array>
    <string name="who_tag_public">
        Public: Anyone can Tag you.
    </string>
    <string name="who_tag_friends">
        Friends: Only your Friends can Tag you.
    </string>
    <string name="who_tag_no_one">
        No one can tag you
    </string>
    <string name="anonymous_user_tag_option">Can anonymous user tag you or not?</string>
    <string name="can_anonymous_person_tag_you">Are Anonymous persons Allowed to tag?</string>
    <string name="who_can_tag_you">Who can Tag you?</string>
    <string name="how_tag_posts_show_on_your_profile">How Tag posts show on your profile?</string>
    <string name="tag_options">Tag Options</string>
    <string name="options">Options</string>
    <string name="toolbar_select_status">Status Type</string>
    <string name="remove_all">Remove All</string>
    <string name="cam_done">Done</string>
    <string name="error">Error…</string>
    <string name="dialog_badge_info">Currently, you have %s badge, to achieve the next %s badge you\'ve to gain %d stars.</string>
    <string name="add_location">Add Location</string>
    <string name="recording_is_too_short_or_not_found">A recording is too shot or not found.</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="error_media_play">Error! unable to play media</string>
    <string name="it_s_spam">It\'s spam</string>
    <string name="against_religion">Against religions</string>
    <string name="sexual_content">Sexual content</string>
    <string name="it_s_inappropriate">It\'s inappropriate</string>
    <string name="permissions_detail_login">
        This app required SMS, Contact and Location permissions.
        SMS permission is used to verify your phone number
        and contacts are required to check your friends on this
        app.
    </string>
    <string name="permission_title_login">Permission needed</string>
    <string name="permission_title_create_profile">Need Some More Permissions</string>
    <string name="permissions_detail_create_profile">
        This app also needs Camera, External storage and Audio recording permissions.
        External storage is used to save your pictures in memory and some app cache.
        Audio Recording is used for audio comments and status.
    </string>
    <string name="nothing_found_title_in_comment">Whoops, no comment found!</string>
    <string name="nothing_found_message_in_comment">No one commented on this post, Be the first</string>
    <string name="nothing_found_message2_in_comment">to comment on it.</string>
    <string name="nothing_found_title_in_nearby">Whoops, nothing found!</string>
    <string name="nothing_found_message_in_nearby">No one is nearby, Maybe try</string>
    <string name="nothing_found_message2_in_nearby"> in another time.</string>
    <string name="nothing_found_title_in_create_list">Whoops, nothing found!</string>
    <string name="nothing_found_message_in_create_list">We aren\'t able to find your friends, </string>
    <string name="nothing_found_message2_in_create_list"> add some friends.</string>
    <string name="info_comment_anonymous_title">Anonymous and Normal User:</string>
    <string name="info_comment_anonymous_detail">Click on profile picture to switch between anonymous and normal user \n\n
        Anonymous: \n In this mode no one knows who commented, your name and profile will not be visible to others. \n\n
        Normal: \n Your profile picture and username visible to other people
    </string>
    <string name="info_comment_audio_title">Audio Comment:</string>
    <string name="info_comment_audio_detail">You can send Audio comments, press and hold mic button to record audio.</string>
    <string name="info_publish_expire_post_title">Expire Time:</string>
    <string name="info_publish_expire_post_detail">
	You can also set expire time for any post, set the expire time for a post and that post will be
    automatically deleted after expire time from your profile and other people feed.</string>
    <string name="info_publish_post_title">Private and Circle:</string>
    <string name="info_publish_post_detail">Private: \n In private mode your friends can only see your status. \n\n
        Circle: \n
        You can define your own Circles, You can add your specific friends in Circle,
        When Circle mode is set, only the friends in that specific Circle can view your status.
    </string>
    <string name="info_publish_post_turn_comment_title">Disable comments:</string>
    <string name="info_publish_post_turn_comment_detail">If you want no one to comment on your post then you can disable comments.</string>
    <string name="info_select_status_talking_title">Talking Photo:"</string>
    <string name="info_select_status_talking_detail">With Talking Photo status you can record Audio caption on photos</string>
    <string name="info_select_status_audio_title">Audio Status:</string>
    <string name="info_select_status_audio_detail">You can also publish Audio status</string>
    <string name="info_story_comment_title">Story Comment:</string>
    <string name="info_story_comment_detail">You can comment on Stories, Story comments are same as status comments</string>
    <string name="info_story_slide_title">Swipe:</string>
    <string name="info_stoy_slide_detail">Swipe lift or right for next or previous story slide</string>
    <string name="info_list_remove_member_title">Remove members:</string>
    <string name="info_list_remove_member_detail">If you want to remove any member from your Circle, Just swipe left that member and it will be removed.</string>
    <string name="info_home_private_title">Private Profile:</string>
    <string name="info_home_private">Private posts of your friends are displayed in the private section and your private posts are displayed in their private section.
    The followers cannot see your private posts. To make someone a friend, it is necessary that you both have saved each other\'s mobile number.</string>
    <string name="info_home_public_title">Public Profile:</string>
    <string name="info_home_public">Public posts of your friends are displayed in here and your public posts are displayed in their public section. </string>
    <string name="nothing_found_title_list">You\'ve not created any Circle</string>
    <string name="nothing_found_mesaage1">By using Circle you can limit your \n post to specific persons! \n </string>
    <string name="by_log_in_you_are_accepting">By Log in you are accepting &#160;</string>
    <string name="term_and_condition">Terms and conditions</string>
</resources>