<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/no_internet"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/font_size_high"
        android:textStyle="bold"
        android:text="@string/ooops"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/no_internet_connection_found"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/check_your_connection"/>

    <Button
        android:id="@+id/btnInternetRetry"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/universal_padding"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@drawable/shape_button_blue_bg"
        android:textColor="@android:color/white"
        android:elevation="@dimen/overview_elevation"
        android:text="@string/retry"/>

</LinearLayout>